--- a/css/style.css
+++ b/css/style.css
@@ -1,96 +1,323 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
+.container {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  /* margin: 20px; */
+  max-width: 650px;
+  margin: auto;
+  /* width: 100%; */
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.item {
+  background-color: #F0F0F0;
+  border-radius: 20px;
+  padding: 12px;
+  margin: 12px auto;
+  /* height: 50%; */
+  /* font-size: 25px; */
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.item_1 {
+  width: 148px;
+  height: 148px;
+  padding: 0px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
+.item_2 {
+  width: 124px;
+  height: 124px;
 }
 
-.card {
-  padding: 2em;
+.item_3 {
+  width: 267px;
+  height: 124px;
 }
 
-.read-the-docs {
-  color: #888;
+.item_4 {
+  width: 441px;
+  height: 359px;
+  /* flex: 1; */
+  /* margin: 12px; */
+  /* height: 124px; */
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.item_5 {
+  width: 124px;
+  height: 359px;
+
+  /* flex: 
+  1; */
+  /* margin: 12px; */
+}
+
+.item_6 {
+  width: 295px;
+  height: 289px;
+  /* flex: 1; */
+  /* margin: 12px; */
+}
+
+.item_7 {
+  display: flex;
+  flex-direction: column;
+  /* height: 100%; */
+  width: 280px;
+  height: 313px;
+  background-color: white;
+  border-radius: 0px;
+  padding: 0px;
+  /* flex: 1; */
+  /* margin: 12px; */
+  /* height: 124px; */
+}
+
+.interests {
+  background-color: #F0F0F0;
+  border-radius: 20px;
+  padding: 12px;
+  flex: 2;
+}
+
+.interest_buttom {
+  background-color: white;
+  border-radius: 40px;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.contacts {
+  background-color: black;
+  color: white;
+  border-radius: 20px;
+  padding: 12px;
+  flex: 1;
+  margin-top: 12px;
 }
+
+.most-recent {
+  background-color: #7E731266; 
+  color: #DDF163; 
+  border-radius: 20px;
+  text-align: center;
+  margin: 6px;
+  padding: 2px;
+}
+
+.date-exp1 {
+  display: flex;
+  justify-content: space-between;
+  height: 30%;
+}
+
+p {
+  font-family: 'Poppins';
+}
+
+.headers {
+  font-size: 14px;
+  font-weight: 700;
+  margin: 0px 0px 10px 0px;
+}
+
+.text {
+  font-size: 10px;
+  font-weight: 700;
+}
+
+.small-text {
+  font-size: 8px;
+  font-weight: 500;
+}
+
+input {
+  box-sizing: border-box;
+  border: none;
+  background-color: #F0F0F0;
+  font-family: 'Poppins';
+  margin: 6px;
+  width: 100px;
+}
+
+input:invalid {
+  border: 2px solid red;
+}
+
+.name-input {
+  width: 90%;
+}
+
+.name-input:focus {
+  border-color: #008CBA;
+  box-shadow: 0 0 5px 2px #008CBA;
+}
+
+.role-input {
+  width: 90%;
+}
+
+.add-file {
+  width: 148px;
+  height: 148px; /*124*/
+  /* visibility: hidden; */
+  position: absolute;
+  opacity: 0;
+  margin: 0px;
+}
+/* 
+img.alt {
+  font-family: 'Poppins';
+  text-align: center;
+  margin: 12px;
+} */
+
+.image1 {
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  /* font-family: 'Poppins'; */
+  text-align: center;
+  line-height: 50px;
+  /* margin: 12px; */
+}
+
+.tools {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+  height: 90%;
+}
+
+.tool {
+  background-color: white;
+  border-radius: 6px;
+  /* padding: 6px; */
+  margin: 12px auto;
+  flex: 1;
+  width: 90%;
+}
+
+.tool-type {
+  background-color: black;
+  color: white;
+  border-radius: 60px;
+  display: block;
+  margin: auto;
+}
+
+.tool-buttom {
+  border: black 1px solid;
+  border-radius: 50px;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  cursor: pointer;
+}
+
+
+.experience {
+  display: flex;
+  flex-direction: column;
+  /* flex-wrap: wrap; */
+  /* justify-content: space-between; */
+  height: 90%;
+}
+
+.exp {
+  background-color: white;
+  border-radius: 10px;
+  padding: 6px;
+  margin: 6px auto;
+  flex: 1;
+  width: 95%;
+}
+
+.education {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  /* justify-content: space-between; */
+  /* width: 100%; */
+  height: 90%;
+  width: 100%;
+}
+
+.ed {
+  background-color: white;
+  border-radius: 10px; 
+  margin: 6px;
+  /* flex: 1; */
+  width: 40%;
+  height: 40%;
+
+}
+
+.ed1 {
+  height: 20%;
+  display: flex;
+}
+
+.ed2 {
+  height: 45%;
+  padding: 5px 0px;
+  vertical-align: center;
+}
+
+.ed3 {
+  height: 20%;
+}
+
+.date-input {
+  background-color: white;
+  height: 30%;
+}
+
+.contacts-input {
+  background-color: black;
+  color: white;
+  width: 90%;
+}
+
+.interest-input {
+  background-color: white;
+  border-radius: 40px;
+}
+
+.PDF-export-button {
+  border-radius: 20px;
+  font-family: "Poppins";
+  border: 2px solid black;
+  display: block;
+  margin: 12px auto;
+  cursor: pointer;
+}
+
+.ripple {
+  background-position: center;
+  transition: background 0.8s;
+}
+
+.ripple:hover {
+  background: #47a7f5 radial-gradient(circle, transparent 1%, #47a7f5 1%) center/15000%;
+}
+
+.ripple:active {
+  background-color: #6eb9f7;
+  background-size: 100%;
+  transition: background 0s;
+}
+
+/* .f {
+  position: absolute;
+  margin: 0 auto;
+  width: 10px;
+  height: 10px;
+  background-color: black;
+} */
+
+
+
+/* @media (max-width: 400px) {
+  .item {
+      margin: 100px 0 0 0;
+  }
+} */
+
